# mlcpp

./: CMakeLists.txt  Doxyfile  main.cpp
docs/html/: _c_1_2_users_2danie_2_c_lion_projects_2mlcpp_2include_2supervised_2_k_n_n_8h-example.html  _dataset_8h_source.html  _distance_8h_source.html  _k_n_n_8h_source.html  _metrics_8h_source.html  annotated.html  annotated_dup.js  class_metrics.html  classes.html  classmlcpp_1_1_dataset-members.html  classmlcpp_1_1_dataset.html  classmlcpp_1_1_dataset.js  classmlcpp_1_1_k_n_n-members.html  classmlcpp_1_1_k_n_n.html  classmlcpp_1_1_k_n_n.js  dir_3d69f64eaf81436fe2b22361382717e5.html  dir_3d69f64eaf81436fe2b22361382717e5.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_aebb8dcc11953d78e620bbef0b9e2183.html  dir_c7c164ff6bc48eac157848d26eb50e69.html  dir_c7c164ff6bc48eac157848d26eb50e69.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_f853a4facb709f8bc05b1c6ed49f3f23.html  doxygen_crawl.html  examples.html  examples.js  files.html  functions.html  functions_func.html  index.html  navtreedata.js  navtreeindex0.js
docs/latex/: _c_1_2_users_2danie_2_c_lion_projects_2mlcpp_2include_2supervised_2_k_n_n_8h-example.tex  _dataset_8h_source.tex  _distance_8h_source.tex  _k_n_n_8h_source.tex  _metrics_8h_source.tex  annotated.tex  class_metrics.tex  classmlcpp_1_1_dataset.tex  classmlcpp_1_1_k_n_n.tex  examples.tex  files.tex  refman.tex
include/core/: Dataset.h  Distance.h  Metrics.h
include/supervised/: KNN.h  LinearRegression.h
src/core/: Dataset.cpp  Metrics.cpp
(+13 files in other folders)
